--- a/app/views/usuarios/registrations/edit.html.erb
+++ b/app/views/usuarios/registrations/edit.html.erb
@@ -1,63 +1,104 @@
-<h2>Editar <%= resource_name.to_s.humanize %></h2>
+<% if false %>
+  <h2>Editar <%= resource_name.to_s.humanize %></h2>
+<% end %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "usuarios/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :nombre %><br />
-    <%= f.text_field :nombre, autofocus: true, autocomplete: "nombre" %>
-  </div>
+  <div class="columns is-centered mt-4">
+    <div class="column is-4">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "correo_electronico" %>
-  </div>
+      <div><h1 class="title has-background-info-light is-3 mb-4">Editar Datos</h1></div>
 
-  <div class="field">
-    <%= f.label :telefono %><br />
-    <%= f.phone_field :telefono, autofocus: true, autocomplete: "numero de telefono" %>
-  </div>
+      <div class="field">
+        <label class="label has-text-left">Nombre</label>
+        <div class="control">
+          <%= f.text_field :nombre, :class => "input", :type => "text", :placeholder => "Ingrese su Nombre"%>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :direccion %><br />
-    <%= f.text_field :direccion, autofocus: true, autocomplete: "direccion" %>
-  </div>
+      <div class="field">
+        <label class="label has-text-left">Email</label>
+        <div class="control has-icons-left has-icons-right">
+          <%= f.email_field :email, :class => "input", :type => "email", :placeholder => "Ingrese Email"%>
+          <span class="icon is-small is-left">
+            <i class="fas fa-envelope"></i>
+          </span>
+          <span class="icon is-small is-right">
+            <i class="fas fa-exclamation-triangle"></i>
+          </span>
+        </div>
+      </div>
 
-  <div class="field">
-    <%= f.label :url_de_la_foto_de_perfil %><br />
-    <%= f.text_field :imagen, autofocus: true, autocomplete: "url foto de perfil" %>
-  </div>
+      <div class="field">
+      <div class="control">
+        <label class="label has-text-left">Telefono</label>
+        <%# <a class="button is-static">
+          +569
+        </a> %>
+        <%= f.phone_field :telefono, :type => "tel", :class => "input" , :placeholder => "Ingrese su Teléfono"%>
+      </div>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="field">
+        <label class="label has-text-left">Direccion</label>
+        <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Ingrese su Direccion" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :contraseña %> <i>(Deja esta casilla en blanco si no deseas cambiar la contraseña)</i><br />
-    <%= f.password_field :password, autocomplete: "nueva contraseña" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> caracteres mínimo</em>
-    <% end %>
-  </div>
+      <div class="field">
+        <label class="label has-text-left">Url Imagen</label>
+        <%= f.text_field :imagen, :class => "input", :type => "text", :placeholder => "Ingrese el url de la foto" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :confirmacion_contraseña %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "confirmacion nueva contraseña" %>
-  </div>
-  
-  <div class="field">
-    <%= f.label :contraseña_actual %> <i>(Necesitamos tu contraseña actual para confirmar los cambios)</i><br />
-    <%= f.password_field :current_password, autocomplete: "contraseña actual" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Actualizar" %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+
+      <div class="field">
+        <label class="label has-text-left">Nueva Contraseña</label> 
+        <% if @minimum_password_length %>
+        <% end %>
+        <p class="control has-icons-left">
+        <%= f.password_field :password, :class => "input", :type => "password", :placeholder => "Dejar en blanco sino se desea cambiar" %>
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
+
+      <div class="field">
+        <label class="label has-text-left">Confirmacion Nueva Contraseña</label> 
+        <%= f.password_field :password_confirmation, :class => "input", :type => "password", :placeholder => "Confirmacion Nueva Contraseña"  %>
+      </div>
+      
+      <div class="mt-4 field">
+        <label class="label has-background-success-light has-text-left">Contraseña Actual</label> 
+        <p class="control has-icons-left">
+          <%= f.password_field :current_password, :class => "input", :type => "password", :placeholder => "Ingrese su ontraseña actual" %>
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
+      </div>
+      
+      <div class="actions">
+        <%= f.submit "Actualizar", class: "button is-success is-light is-responsive" %>
+      </div>
+    </div>
   </div>
 <% end %>
 
-<h3>Eliminar mi cuenta</h3>
+<div class="mt-4 columns is-centered mt-4">
+  <div class="column is-4">
+    <div>
+      <h3 class="title has-background-info-light is-4">Eliminar Mi Cuenta</h3>
+      <%= button_to "Eliminar mi cuenta", registration_path(resource_name), data: { confirm: "Estás Segur@?" }, method: :delete, class: "button is-danger is-light is-responsive" %>
+    </div>
+  </div>
+</div>
 
-<%= button_to "Eliminar mi cuenta", registration_path(resource_name), data: { confirm: "Estás Segur@?" }, method: :delete %>
 
-<%= link_to "Atrás", :back %>
+<div>
+  <%= link_to "Atrás", :back, class: "mt-3 button is-light is-small" %>
+</div>
