--- a/app/views/usuarios/registrations/edit.html.erb
+++ b/app/views/usuarios/registrations/edit.html.erb
@@ -100,5 +100,5 @@
 
 
 <div>
-  <%= link_to "Atrás", :back, class: "mt-3 button is-light is-small" %>
+  <%= link_to "Atrás", :back, class: "mt-3 button is-link is-outlined is-small" %>
 </div>
