--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -64,7 +64,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Registrarse", class: "button is-light" %>
+        <%= f.submit "Registrarse", class: "button is-success is-outlined is-responsive" %>
       </div>
     </div>
   </div>
