--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -1,40 +1,73 @@
-<h1>Editar Turno</h1>
 <%= form_with(model: @turno , method: :patch, url: turnos_update_path(:id => @turno.id)) do |form| %>
 
-   <div>
-        <%= form.label :tipo_turno %>
-        <%= form.select :tipo, ["Seleccionar", "Ida", "Vuelta"] %>
+    <div><h1 class="mt-4 title is-3 has-background-info-light mb-4">Editar turno</h1></div>
+    <div class="columns is-centered mt-4"> 
+        
+        
+        <div class="column is-2">
+
+            <div class="field">
+                <label class="label">Tipo de viaje</label>
+                <div class="select">
+                    <%= form.select :tipo, ["Ida", "Vuelta"] %>
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">Limite de Personas</label>
+                <div class="select">
+                    <%= form.select :limite_personas, [2, 3, 4, 5, 6, 7, 8, 9, 10] %>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="column is-2">
+
+            <div class="field">
+                <label class="label">Dia de la semana</label>
+                <div class="select">
+                    <%= form.select :dia_de_la_semana, ['Lunes', 'Martes', 'Miercoles', 'Jueves', 'Viernes', 'Sabado', 'Domingo'] %>
+                </div>
+            </div>
+
+            <div class="field">
+                <label class="label">Hora de salida</label>
+                <div class="select">
+                    <%=form.select :hora, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10',
+                                                '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21',
+                        '22', '23'] %>
+                </div>
+                <span class="colon">:</span>
+                <div class="select">
+                    <%=form.select :minutos, ['00', '15', '30', '45'] %>
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <%= form.label :limite_personas %>
-        <%= form.number_field :limite_personas, in: 1..10, step: 1 %>
-    </div>
-    <div>
-        <%= form.label :direccion_llegada %>
-        <%= form.text_field :direccion_llegada %>
-    </div>
-    
-    <div>
-        <%= form.label :direccion_salida %>
-        <%= form.text_field :direccion_salida %>
+
+    <div class="columns is-centered">
+
+        <div class="column is-4">
+
+            <div class="field">
+                    <label class="label">Direccion de Llegada</label>
+                    <%= form.text_field :direccion_llegada, :class => "input", :type => "text", :placeholder => "Ingrese la direccion de llegada" %>
+                </div>
+                
+                <div class="field">
+                    <label class="label">Direccion de Salida</label>
+                    <%= form.text_field :direccion_salida, :class => "input", :type => "text", :placeholder => "Ingrese la direccion de salida" %>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div>
-        <%= form.label :dia_de_la_semana %>
-        <%= form.select :dia_de_la_semana, ['Lunes, Martes, Miercoles, Jueves, Viernes, Sabado, Domingo'] %>
+        <%= form.submit 'Editar Turno', class: "button is-light is-success is-focused is-responsive" %>
     </div>
-
-    <div>
-    <%=form.label :hora_de_salida  %>
-    <%=form.select :hora, ['00', '01', '02', '03', '04', '05', '06', '07', '08', '09', '10',
-                                '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21',
-           '22', '23'] %>
-    <span class="colon">:</span>
-    <%=form.select :minutos, ['00', '15', '30', '45'] %>
-    </div>
-
-    <div>
-        <%= form.submit 'Editar Turno' %>
-    </div>
-    
 <% end %>
+
+<div>
+    <%= link_to 'Volver a ver turnos', turnos_index_path, class: "mt-5 button is-link is-outlined is-small" %>
+</div>
