--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -69,5 +69,5 @@
 <% end %>
 
 <div>
-    <%= link_to 'Volver a ver turnos', turnos_index_path, class: "mt-5 button is-link is-outlined is-small" %>
+    <%= link_to 'Volver a turnos creados por mi', turnos_index_path(:razon => "Turnos Creados por mi"), class: "mt-5 button is-link is-outlined is-small" %>
 </div>
